--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>ninh</title>
 </head>
 <body>
-    <h1> I HATE GITHUB SO MUCH KMS
-    </h1>
+
+    <table border="1">
+        <tr>
+            <th>No.</th>
+            <th>Compnay</th>
+            <th>Model</th>
+        </tr>
+
+        <tr>
+            <td>0</td>
+            <td>Samsung</td>
+            <td>Note 9</td>
+        </tr>
+
+        <tr>
+            <td>02</td>
+            <td>Vivo</td>
+            <td>V9 Pro</td>
+        </tr>
+
+    </table>
+
 </body>
 </html>
