--- a/index.html
+++ b/index.html
@@ -3,30 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>ninh</title>
+    <title>ninh dot com</title>
+
+    <style>
+        p{
+            font-size: 40px;
+            font-weight: bold;
+            color: red;
+        }
+
+    </style>
 </head>
 <body>
+    <p>This is inline css</p>
 
-    <table border="1">
-        <tr>
-            <th>No.</th>
-            <th>Compnay</th>
-            <th>Model</th>
-        </tr>
-
-        <tr>
-            <td>0</td>
-            <td>Samsung</td>
-            <td>Note 9</td>
-        </tr>
-
-        <tr>
-            <td>02</td>
-            <td>Vivo</td>
-            <td>V9 Pro</td>
-        </tr>
-
-    </table>
 
 </body>
 </html>
