--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>ninh dot com</title>
-
-    <style>
-        p{
-            font-size: 40px;
-            font-weight: bold;
-            color: red;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <p>This is inline css</p>
-
-
+    <nav id="desktop-nav">
+        <div class="logo">ninh thi</div>
+        <div>
+            <ul class="nav-links">
+                <li><a href="#about">about</a></li>
+                <li><a href="#experience">experience</a></li>
+                <li><a href="#projects">projects</a></li>
+                <li><a href="#contact">contact</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
