--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>ninh dot com</title>
+    <title>Ninh Thi's Portfolio</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="mediaqueries.css" type="text/css">
+    <link rel="stylesheet" href="https://use.typekit.net/xlv4obn.css">
 </head>
 <body>
     <nav id="desktop-nav">
@@ -12,11 +14,27 @@
         <div>
             <ul class="nav-links">
                 <li><a href="#about">about</a></li>
-                <li><a href="#experience">experience</a></li>
-                <li><a href="#projects">projects</a></li>
+                <li><a href="#experiences">experiences</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
         </div>
     </nav>
+
+    <nav id="hamburger-nav">
+        <div class="logo">ninh thi</div>
+        <div class="hamburger-menu">
+            <div class="hamburger-icon" onclick = "toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="menu-links">
+                <li><a href="#about" onclick = "toggleMenu()">about</a></li>
+                <li><a href="#experiences" onclick = "toggleMenu()">experiences</a></li>
+                <li><a href="#contact" onclick = "toggleMenu()">contact</a></li>
+            </div>
+        </div>
+    </nav>
+    <script src="script.js"></script>
 </body>
 </html>
