started home page

--- a/index.html
+++ b/index.html
@@ -36,5 +36,16 @@
         </div>
     </nav>
     <script src="script.js"></script>
+
+    <header class="home">
+        <div class="home-content">
+            <h1>Hello! 👋<h1>
+            <h1>I'm Ninh and I'm a Computer Science 👾<h1>
+            <h1>student at Northeastern.</h1>
+        </div>
+        <div class="home-portrait">
+            <img src="images/snoopy.png" alt="temp-portrait">
+        </div>
+    </header>
 </body>
 </html>
