--- a/index.html
+++ b/index.html
@@ -37,14 +37,25 @@
     </nav>
     <script src="script.js"></script>
 
-    <header class="home">
+    <header id="desktop-home">
         <div class="home-content">
             <h1>Hello! 👋<h1>
             <h1>I'm Ninh and I'm a Computer Science 👾<h1>
             <h1>student at Northeastern.</h1>
         </div>
         <div class="home-portrait">
-            <img src="images/snoopy.png" alt="temp-portrait">
+            <img src="images/snoopy-sit.png" alt="temp-portrait">
+        </div>
+    </header>
+
+    <header id="small-home">
+        <div class="home-content">
+            <h1>Hello! 👋<h1>
+            <h1>I'm Ninh and I'm a Computer Science 👾<h1>
+            <h1>student at Northeastern.</h1>
+        </div>
+        <div class="home-portrait">
+            <img src="images/snoopy-sit.png" alt="temp-portrait">
         </div>
     </header>
 </body>
